--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "react-native-javascript-snackbar",
-  "version": "1.0.2",
-  "main": "/app/SnackBar.js",
+  "version": "1.0.5",
+  "main": "SnackBar.js",
   "scripts": {
     "test": "jest"
   },
   "dependencies": {
-    "prop-types": "^15.6.1",
-    "react": "16.3.0-alpha.1",
-    "react-native": "0.52.0"
+    "prop-types": "^15.6.1"
   },
   "repository": {
     "type": "git",
@@ -21,12 +19,7 @@
     "android",
     "javascript"
   ],
-  "devDependencies": {
-    "babel-jest": "22.4.1",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.2",
-    "react-test-renderer": "16.3.0-alpha.1"
-  },
+  "devDependencies": {},
   "jest": {
     "preset": "react-native"
   },
